# Device-Monitor-Dashboard

./: CMakeCache.txt  CMakeLists.txt  Main.cpp  Makefile  dashboard
Inc/: DashboardWindow.h  Sensor.h
Src/: DashboardWindow.cpp  Sensor.cpp
dashboard_autogen/: mocs_compilation.cpp
dashboard_autogen/C2K46SIDN7/: moc_DashboardWindow.cpp  moc_DashboardWindow.cpp.d  moc_Sensor.cpp  moc_Sensor.cpp.d
